replace cell element tag from span to div

--- a/board.html
+++ b/board.html
@@ -9,7 +9,7 @@
 <body>
 
 	<div id="chessboard">
-		<span class="odd-row">
+		<div class="odd-row">
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>
@@ -18,9 +18,9 @@
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>			
-		</span>
+		</div>
 
-		<span class="even-row">
+		<div class="even-row">
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>
@@ -29,9 +29,9 @@
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>			
-		</span>
+		</div>
 
-		<span class="odd-row">
+		<div class="odd-row">
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>
@@ -40,9 +40,9 @@
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>			
-		</span>
+		</div>
 
-		<span class="even-row">
+		<div class="even-row">
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>
@@ -51,9 +51,9 @@
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>			
-		</span>
+		</div>
 
-		<span class="odd-row">
+		<div class="odd-row">
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>
@@ -62,9 +62,9 @@
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>			
-		</span>
+		</div>
 
-		<span class="even-row">
+		<div class="even-row">
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>
@@ -73,9 +73,9 @@
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>			
-		</span>
+		</div>
 
-		<span class="odd-row">
+		<div class="odd-row">
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>
@@ -84,9 +84,9 @@
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>			
-		</span>
+		</div>
 
-		<span class="even-row">
+		<div class="even-row">
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>
@@ -95,7 +95,7 @@
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>
 			<div class="cell">&nbsp;</div>			
-		</span>
+		</div>
 
 	</div>
 	
